--- a/pcg_paper.css
+++ b/pcg_paper.css
@@ -1,4 +1,4 @@
-/@charset "utf-8";
+@charset "utf-8";
 
 /*
    New Perspectives on HTML5 and CSS3, 7th Edition
@@ -6,11 +6,14 @@
    Case Problem 4
 
    Park City Gazette Style Sheet
-   Author: 
-   Date:   
+   Author: Melinda Chirila
+   Date:   10/29/2018
 
-   Filename:         pcg_paper.css
+   Filename:pcg_paper.css
    Supporting Files: 
 
 */
 
+
+
+/* these are the  */
