--- a/pcg_paper.css
+++ b/pcg_paper.css
@@ -14,6 +14,80 @@
 
 */
 
+header img {
+    width: 100%;
 
+}
+article {
+    background: rgba(255, 255, 255, 0.3);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+    color: #000000;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 4vw;
+    border-radius: 4vw;
+}
+nav#nav2 {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+nav[id^="nav"] {
+    margin-left: auto;
+    margin-right: auto;
+    width: 85%;
+    height: 20%;
+    display: block;
+}
+nav#nav1 {
+    padding-top: 1.2%;
+}
+nav[id^="nav"] a {
+    display: block;
+    background-color: rgb(53, 53, 53);
+    text-decoration: none;
+    color: white;
+    float: left;
+    text-align: center;
+    font-size: 85%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+nav#nav1 a {
+    width: 12%;
+    border: 1px solid black;
+}
+nav#nav2 a {
+    width: 16.08%;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+}
+nav#nav3 a {
+    width: 19.35%;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+footer {
+    margin-right: auto;
+    margin-left: auto;
+    background-color: pink;
+    padding-top: .5%;
+    padding-bottom: .5%;
+    clear: both; 
+}
+
+footer li {
+    display: inline;
+    text-align: center;
+    margin-right: 5.5%;
+    margin-left: 5.5%;
+}
 
 /* these are the  */
