--- a/pcg_paper.css
+++ b/pcg_paper.css
@@ -4,90 +4,177 @@
    New Perspectives on HTML5 and CSS3, 7th Edition
    Tutorial 3
    Case Problem 4
-
    Park City Gazette Style Sheet
-   Author: Melinda Chirila
-   Date:   10/29/2018
-
-   Filename:pcg_paper.css
+   Author: Melinda Chirila 
+   Date: 10/25/2018 
+   Filename: pcg_paper.css
    Supporting Files: 
-
 */
+html {
+    margin: 0px;
+    padding: 0px;
+    font-family: 'EstrangeloEdessaRegular';
+    font-size: 20px;
+}
+
+header {
+    width: 100%;
+    margin: auto auto;
+    display: block;
+    padding: 0px;
+    font-family: 'Permanent Marker', cursive;
+    padding-left: 10px;
+}
 
 header img {
     width: 100%;
+}
 
+#heading1 {
+    margin: 0px;
 }
-article {
-    background: rgba(255, 255, 255, 0.3);
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-    color: #000000;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 4vw;
-    border-radius: 4vw;
-}
-nav#nav2 {
-    float: left;
-    color: #f2f2f2;
+
+h1#heading2 {
+    margin: auto auto;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+    font-family: 'Coming Soon', cursive;
+    background-color: rgb(255, 187, 0);
 }
 
-nav[id^="nav"] {
-    margin-left: auto;
-    margin-right: auto;
-    width: 85%;
-    height: 20%;
-    display: block;
+h2#italicheading {
+    padding: 0px;
+    margin: 0px;
+    clear: left;
 }
-nav#nav1 {
-    padding-top: 1.2%;
+
+main {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
 }
-nav[id^="nav"] a {
-    display: block;
-    background-color: rgb(53, 53, 53);
-    text-decoration: none;
+
+ul {
+    padding-inline-start: 0px;
+}
+
+nav.vertical {
+    background-color: rgb(117, 117, 117);
+    width: 50%;
+    padding-bottom: 700px;
     color: white;
     float: left;
     text-align: center;
-    font-size: 85%;
-    padding-top: 5px;
-    padding-bottom: 5px;
 }
-nav#nav1 a {
+
+nav li a {
+    text-decoration: none;
+    color: #FFF1AA;
+    font-size: 100%;
+}
+
+nav ul {
+    list-style: none;
+    text-align: center;
+}
+
+nav li:hover {
+    color: #ffffff;
+}
+
+.divider {
+    padding-top: 20px;
+}
+
+aside {
+    background-color: rgb(117, 117, 117);
+    padding-bottom: 700px;
+    width: 50%;
+    margin-left: 50%;
+    color: white;
+    float: right;
+    text-align: center;
+
+}
+
+aside ul li {
+    padding: 20px;
+}
+
+aside h1 {
+    padding: 15px;
+    font-size: 150%;
+    text-decoration: underline;
+    color: rgb(73, 73, 73);
+    letter-spacing: 5px;
+}
+
+.right li a {
+    color: #BCC;
+}
+
+.right .last {
+    border: none;
+}
+
+.left {
     width: 12%;
-    border: 1px solid black;
+    text-align: center;
 }
-nav#nav2 a {
-    width: 16.08%;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
+
+body {
+    background-attachment: fixed;
+    margin: 0px 0px;
+    background-repeat: round;
 }
-nav#nav3 a {
-    width: 19.35%;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
+
+section#midsec {
+    width: 100%;
+}
+
+section::after {
+    clear: both;
+    content: "";
+    display: table;
+}
+
+
+
+img#blake {
+    display: inline;
+    margin-right: 0%;
+}
+
+p {
+    position: relative;
+    top: 0%;
+    right: 0%;
+    margin-top: 0%;
+}
+
+article[id^="story"] {
+    height: 300px;
+    float: left;
+    overflow: auto;
+    background-color: rgb(173, 173, 173);
+}
+/* colors for the article bubble is going to be mustard yellow */
+article {
+    display: block;
+    box-shadow: 4px 4px 4px black;
+    background-color: rgb(95, 94, 86);
+    text-align: center;
+    border: 2px solid black;
+    border-radius: 35px;
+    margin: 20px auto;
+    margin-top: 15px;
+    line-height: 1.5;
+    display: block;
+    padding: 20px;
+    color: #BCC;
+    text-shadow: 2px 1px 1px black;
 }
 
 footer {
-    margin-right: auto;
-    margin-left: auto;
-    background-color: pink;
-    padding-top: .5%;
-    padding-bottom: .5%;
-    clear: both; 
-}
-
-footer li {
-    display: inline;
     text-align: center;
-    margin-right: 5.5%;
-    margin-left: 5.5%;
+    background-color: #4E5D79;
+    clear: left;
 }
-
-/* these are the  */
